ファームウェアVer1.01では使用できない注意書きを追加

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </ol>
             <h2>既知の問題</h2>
             <ul>
+                <li>初期ファームウェアのみ利用可能です。新ファームVer1.01ではキーコードがランダムに上書きされるため予期しない動作となります。</li>
                 <li>接続後、まれにVOLを取得できないことがある</li>
                 <li>SQL値が取得できないため、接続後の値が不正確</li>
                 <li>本体側で変更したVOL,SQLの値はアプリ上で反映されない</li>
